CNCodeEditor/outTemp.txt
C:\Users\kch79\Desktop\cncodeeditor.c:1:2: error: invalid preprocessing directive #inclue; did you mean #include?
    1 | #inclue <stdio.h>
      |  ^~~~~~
      |  include
C:\Users\kch79\Desktop\cncodeeditor.c: In function 'main':
C:\Users\kch79\Desktop\cncodeeditor.c:4:2: warning: implicit declaration of function 'print' [-Wimplicit-function-declaration]
    4 |  print("Hello CNCodeEditor\n");
      |  ^~~~~
C:\Users\kch79\Desktop\cncodeeditor.c:6:10: error: expected ';' before '}' token
    6 |  return 0
      |          ^
      |          ;
    7 | }
      | ~         
